Fix dashboard popup being behind the event blocks

--- a/front-end/pages/Dashboard.css
+++ b/front-end/pages/Dashboard.css
@@ -92,6 +92,8 @@ body {
     bottom: 10px;
     right: 0;
     left: 0;
+
+    z-index: 1;
 }
 
 .expandedEventDescription {
